Controles vertical y horizontal

--- a/Robocol/testapp/src/app/rover/brazo/brazo-pestania/brazo-pestania.component.html
+++ b/Robocol/testapp/src/app/rover/brazo/brazo-pestania/brazo-pestania.component.html
@@ -25,7 +25,7 @@
          <div class="card-body border-warning">
             <div class="col">
                <div class="collapse multi-collapse show" id="inversa">
-                  
+                  <app-brazo-cinematica-inversa-horizontal></app-brazo-cinematica-inversa-horizontal>
                </div>
             </div>
             <div class="col">
