--- a/Robocol/testapp/src/app/rover/brazo/brazo-cinematica-directa/brazo-cinematica-directa.component.html
+++ b/Robocol/testapp/src/app/rover/brazo/brazo-cinematica-directa/brazo-cinematica-directa.component.html
@@ -1,92 +1,92 @@
-<table class="table">
+<table class="table table-borderless" style="width: 100%;">
    <tbody>
-      <tr>
-         <th scope="row">Joint 1</th>
-         <td><button (mousedown)="change_value('joint_1', 'decrease')" (mouseup)="stop_changing_value()" id="1_ATRAS" type="button" class="btn btn-secondary button_left"><=</button></td>
-         <td class="text-center col-6" style="margin-left: 0px; margin-right: 0px; padding-left: 0px; padding-right: 0px;">
+      <tr class="align-middle">
+         <th class="align-middle" scope="row">J1</th>
+         <td class="align-middle"><button (mousedown)="change_value('joint_1', 'decrease')" (mouseup)="stop_changing_value()" id="1_ATRAS" type="button" class="btn btn-secondary button_left"><i class="fas fa-angle-left fa-2x"></i></button></td>
+         <td class="align-middle" class="text-center col-6 align-middle" style="margin-left: 0px; margin-right: 0px; padding-left: 0px; padding-right: 0px;">
             <div class="progress">
                <div class="progress-bar" role="progressbar" style="width: {{joint_1_value}}%; margin-left: 0px; margin-right: 0px;" attr.aria-valuenow="{{joint_1_value}}" attr.aria-valuemin="{{min_value_joint}}" attr.aria-valuemax="{{max_value_joint}}"></div>
             </div>
          </td>
-         <td><button id="1_ADELANTE" (mousedown)="change_value('joint_1', 'increase')" (mouseup)="stop_changing_value()" type="button" class="btn btn-secondary button_right">=></button></td>
-         <td><input disabled style="color: black;font-size: 15px; width: 100px;" name="" value="{{joint_1_value}}°" id = "joint1"></td>
+         <td class="align-middle"><button id="1_ADELANTE" (mousedown)="change_value('joint_1', 'increase')" (mouseup)="stop_changing_value()" type="button" class="btn btn-secondary button_right"><i class="fas fa-angle-right fa-2x"></i></button></td>
+         <td class="align-middle"><input disabled style="color: black;font-size: 15px; width: 100px;" name="" value="{{joint_1_value}}°" id = "joint1"></td>
       </tr>
-      <tr>
-         <th scope="row">Joint 2</th>
-         <td><button id="2_ATRAS" (mousedown)="change_value('joint_2', 'decrease')" (mouseup)="stop_changing_value()" type="button" class="btn btn-secondary button_left"><=</button></td>
-         <td class="text-center" style="margin-left: 0px; margin-right: 0px; padding-left: 0px; padding-right: 0px">
+      <tr class="align-middle">
+         <th class="align-middle" scope="row">J2</th>
+         <td class="align-middle"><button id="2_ATRAS" (mousedown)="change_value('joint_2', 'decrease')" (mouseup)="stop_changing_value()" type="button" class="btn btn-secondary button_left"><i class="fas fa-angle-left fa-2x"></i></button></td>
+         <td class="align-middle" class="text-center align-middle" style="margin-left: 0px; margin-right: 0px; padding-left: 0px; padding-right: 0px">
             <div class="progress">
                <div class="progress-bar" role="progressbar" style="width: {{joint_2_value}}%; margin-left: 0px; margin-right: 0px;" attr.aria-valuenow="{{joint_2_value}}" attr.aria-valuemin="{{min_value_joint}}" attr.aria-valuemax="{{max_value_joint}}"></div>
             </div>
          </td>
-         <td><button id="2_ADELANTE" (mousedown)="change_value('joint_2', 'increase')" (mouseup)="stop_changing_value()" type="button" class="btn btn-secondary button_right">=></button></td>
-         <td><input disabled style="color: black;font-size: 15px; width: 100px;" name="" value="{{joint_2_value}}°" id = "joint2"></td>
+         <td class="align-middle"><button id="2_ADELANTE" (mousedown)="change_value('joint_2', 'increase')" (mouseup)="stop_changing_value()" type="button" class="btn btn-secondary button_right"><i class="fas fa-angle-right fa-2x"></i></button></td>
+         <td class="align-middle"><input disabled style="color: black;font-size: 15px; width: 100px;" name="" value="{{joint_2_value}}°" id = "joint2"></td>
       </tr>
-      <tr>
-         <th scope="row">Joint 3</th>
-         <td><button id="3_ATRAS" (mousedown)="change_value('joint_3', 'decrease')" (mouseup)="stop_changing_value()" type="button" class="btn btn-secondary button_left"><=</button></td>
-         <td class="text-center" style="margin-left: 0px; margin-right: 0px; padding-left: 0px; padding-right: 0px">
+      <tr class="align-middle">
+         <th class="align-middle" scope="row">J3</th>
+         <td class="align-middle"><button id="3_ATRAS" (mousedown)="change_value('joint_3', 'decrease')" (mouseup)="stop_changing_value()" type="button" class="btn btn-secondary button_left"><i class="fas fa-angle-left fa-2x"></i></button></td>
+         <td class="align-middle" class="text-center align-middle" style="margin-left: 0px; margin-right: 0px; padding-left: 0px; padding-right: 0px">
             <div class="progress">
                <div class="progress-bar" role="progressbar" style="width: {{joint_3_value}}%; margin-left: 0px; margin-right: 0px;" attr.aria-valuenow="{{joint_3_value}}" attr.aria-valuemin="{{min_value_joint}}" attr.aria-valuemax="{{max_value_joint}}"></div>
             </div>
          </td>
-         <td><button id="3_ADELANTE" (mousedown)="change_value('joint_3', 'increase')" (mouseup)="stop_changing_value()" type="button" class="btn btn-secondary button_right">=></button></td>
-         <td><input disabled style="color: black;font-size: 15px; width: 100px;" name="" value="{{joint_3_value}}°" id = "joint3"></td>
+         <td class="align-middle"><button id="3_ADELANTE" (mousedown)="change_value('joint_3', 'increase')" (mouseup)="stop_changing_value()" type="button" class="btn btn-secondary button_right"><i class="fas fa-angle-right fa-2x"></i></button></td>
+         <td class="align-middle"><input disabled style="color: black;font-size: 15px; width: 100px;" name="" value="{{joint_3_value}}°" id = "joint3"></td>
       </tr>
-      <tr>
-         <th scope="row">Joint 4</th>
-         <td><button id="4_ATRAS" (mousedown)="change_value('joint_4', 'decrease')" (mouseup)="stop_changing_value()" type="button" class="btn btn-secondary button_left"><=</button></td>
-         <td class="text-center" style="margin-left: 0px; margin-right: 0px; padding-left: 0px; padding-right: 0px">
+      <tr class="align-middle">
+         <th class="align-middle" scope="row">J4</th>
+         <td class="align-middle"><button id="4_ATRAS" (mousedown)="change_value('joint_4', 'decrease')" (mouseup)="stop_changing_value()" type="button" class="btn btn-secondary button_left"><i class="fas fa-angle-left fa-2x"></i></button></td>
+         <td class="align-middle" class="text-center align-middle" style="margin-left: 0px; margin-right: 0px; padding-left: 0px; padding-right: 0px">
             <div class="progress">
                <div class="progress-bar" role="progressbar" style="width: {{joint_4_value}}%; margin-left: 0px; margin-right: 0px;" attr.aria-valuenow="{{joint_4_value}}" attr.aria-valuemin="{{min_value_joint}}" attr.aria-valuemax="{{max_value_joint}}"></div>
             </div>
          </td>
-         <td><button id="4_ADELANTE" (mousedown)="change_value('joint_4', 'increase')" (mouseup)="stop_changing_value()" type="button" class="btn btn-secondary button_right">=></button></td>
-         <td><input disabled style="color: black;font-size: 15px; width: 100px;" name="" value="{{joint_4_value}}°" id = "joint4"></td>
+         <td class="align-middle"><button id="4_ADELANTE" (mousedown)="change_value('joint_4', 'increase')" (mouseup)="stop_changing_value()" type="button" class="btn btn-secondary button_right"><i class="fas fa-angle-right fa-2x"></i></button></td>
+         <td class="align-middle"><input disabled style="color: black;font-size: 15px; width: 100px;" name="" value="{{joint_4_value}}°" id = "joint4"></td>
       </tr>
-      <tr>
-         <th scope="row">Joint 5</th>
-         <td><button id="5_ATRAS" (mousedown)="change_value('joint_5', 'decrease')" (mouseup)="stop_changing_value()" type="button" class="btn btn-secondary button_left"><=</button></td>
-         <td class="text-center" style="margin-left: 0px; margin-right: 0px; padding-left: 0px; padding-right: 0px">
+      <tr class="align-middle">
+         <th class="align-middle" scope="row">J5</th>
+         <td class="align-middle"><button id="5_ATRAS" (mousedown)="change_value('joint_5', 'decrease')" (mouseup)="stop_changing_value()" type="button" class="btn btn-secondary button_left"><i class="fas fa-angle-left fa-2x"></i></button></td>
+         <td class="align-middle" class="text-center align-middle" style="margin-left: 0px; margin-right: 0px; padding-left: 0px; padding-right: 0px">
             <div class="progress">
                <div class="progress-bar" role="progressbar" style="width: {{joint_5_value}}%; margin-left: 0px; margin-right: 0px;" attr.aria-valuenow="{{joint_5_value}}" attr.aria-valuemin="{{min_value_joint}}" attr.aria-valuemax="{{max_value_joint}}"></div>
             </div>
          </td>
-         <td><button id="5_ADELANTE" (mousedown)="change_value('joint_5', 'increase')" (mouseup)="stop_changing_value()" type="button" class="btn btn-secondary button_right">=></button></td>
-         <td><input disabled style="color: black;font-size: 15px; width: 100px;" name="" value="{{joint_5_value}}°" id = "joint5"></td>
+         <td class="align-middle"><button id="5_ADELANTE" (mousedown)="change_value('joint_5', 'increase')" (mouseup)="stop_changing_value()" type="button" class="btn btn-secondary button_right"><i class="fas fa-angle-right fa-2x"></i></button></td>
+         <td class="align-middle"><input disabled style="color: black;font-size: 15px; width: 100px;" name="" value="{{joint_5_value}}°" id = "joint5"></td>
       </tr>
-      <tr>
-         <th scope="row">Joint 6</th>
-         <td><button id="6_ATRAS" (mousedown)="change_value('joint_6', 'decrease')" (mouseup)="stop_changing_value()" type="button" class="btn btn-secondary button_left"><=</button></td>
-         <td class="text-center" style="margin-left: 0px; margin-right: 0px; padding-left: 0px; padding-right: 0px">
+      <tr class="align-middle">
+         <th class="align-middle" scope="row">J6</th>
+         <td class="align-middle"><button id="6_ATRAS" (mousedown)="change_value('joint_6', 'decrease')" (mouseup)="stop_changing_value()" type="button" class="btn btn-secondary button_left"><i class="fas fa-angle-left fa-2x"></i></button></td>
+         <td class="align-middle" class="text-center align-middle" style="margin-left: 0px; margin-right: 0px; padding-left: 0px; padding-right: 0px">
             <div class="progress">
                <div class="progress-bar" role="progressbar" style="width: {{joint_6_value}}%; margin-left: 0px; margin-right: 0px;" attr.aria-valuenow="{{joint_6_value}}" attr.aria-valuemin="{{min_value_joint}}" attr.aria-valuemax="{{max_value_joint}}"></div>
             </div>
          </td>
-         <td><button id="6_ADELANTE" (mousedown)="change_value('joint_6', 'increase')" (mouseup)="stop_changing_value()" type="button" class="btn btn-secondary button_right">=></button></td>
-         <td><input disabled style="color: black;font-size: 15px;width: 100px;" name="" value="{{joint_6_value}}°" id = "joint6"></td>
+         <td class="align-middle"><button id="6_ADELANTE" (mousedown)="change_value('joint_6', 'increase')" (mouseup)="stop_changing_value()" type="button" class="btn btn-secondary button_right"><i class="fas fa-angle-right fa-2x"></i></button></td>
+         <td class="align-middle"><input disabled style="color: black;font-size: 15px;width: 100px;" name="" value="{{joint_6_value}}°" id = "joint6"></td>
       </tr>
-      <tr>
-         <th scope="row">Joint 7</th>
-         <td><button id="7_ATRAS" (mousedown)="change_value('joint_7', 'decrease')" (mouseup)="stop_changing_value()" type="button" class="btn btn-secondary button_left"><=</button></td>
-         <td class="text-center" style="margin-left: 0px; margin-right: 0px; padding-left: 0px; padding-right: 0px">
+      <tr class="align-middle">
+         <th class="align-middle" scope="row">J7</th>
+         <td class="align-middle"><button id="7_ATRAS" (mousedown)="change_value('joint_7', 'decrease')" (mouseup)="stop_changing_value()" type="button" class="btn btn-secondary button_left"><i class="fas fa-angle-left fa-2x"></i></button></td>
+         <td class="align-middle" class="text-center align-middle" style="margin-left: 0px; margin-right: 0px; padding-left: 0px; padding-right: 0px">
             <div class="progress">
                <div class="progress-bar" role="progressbar" style="width: {{joint_7_value}}%; margin-left: 0px; margin-right: 0px;" attr.aria-valuenow="{{joint_7_value}}" attr.aria-valuemin="{{min_value_joint}}" attr.aria-valuemax="{{max_value_joint}}"></div>
             </div>
          </td>
-         <td><button id="7_ADELANTE" (mousedown)="change_value('joint_7', 'increase')" (mouseup)="stop_changing_value()" type="button" class="btn btn-secondary button_right">=></button></td>
-         <td><input disabled style="color: black;font-size: 15px; width: 100px;" name="" value="{{joint_7_value}}°" id = "joint7"></td>
+         <td class="align-middle"><button id="7_ADELANTE" (mousedown)="change_value('joint_7', 'increase')" (mouseup)="stop_changing_value()" type="button" class="btn btn-secondary button_right"><i class="fas fa-angle-right fa-2x"></i></button></td>
+         <td class="align-middle"><input disabled style="color: black;font-size: 15px; width: 100px;" name="" value="{{joint_7_value}}°" id = "joint7"></td>
       </tr>
-      <tr>
-         <th scope="row">Gripper</th>
-         <td><button id="gripper_ATRAS" (mousedown)="change_value('gripper', 'decrease')" (mouseup)="stop_changing_value()" type="button" class="btn btn-secondary button_left"><=</button></td>
-         <td class="text-center" style="margin-left: 0px; margin-right: 0px; padding-left: 0px; padding-right: 0px">
+      <tr class="align-middle">
+         <th class="align-middle" scope="row">GR</th>
+         <td class="align-middle"><button id="gripper_ATRAS" (mousedown)="change_value('gripper', 'decrease')" (mouseup)="stop_changing_value()" type="button" class="btn btn-secondary button_left"><i class="fas fa-angle-left fa-2x"></i></button></td>
+         <td class="align-middle" class="text-center align-middle" style="margin-left: 0px; margin-right: 0px; padding-left: 0px; padding-right: 0px">
             <div class="progress">
                <div class="progress-bar" role="progressbar" style="width: {{gripper_value}}%; margin-left: 0px; margin-right: 0px;" attr.aria-valuenow="{{gripper_value}}" attr.aria-valuemin="{{min_value_gripper}}" attr.aria-valuemax="{{max_value_gripper}}"></div>
             </div>
          </td>
-         <td><button id="gripper_ADELANTE" (mousedown)="change_value('gripper', 'increase')" (mouseup)="stop_changing_value()" type="button" class="btn btn-secondary button_right">=></button></td>
-         <td><input disabled style="color: black;font-size: 15px; width: 100px;" name="" value="{{gripper_value}}°" id = "gripper"></td>
+         <td class="align-middle"><button id="gripper_ADELANTE" (mousedown)="change_value('gripper', 'increase')" (mouseup)="stop_changing_value()" type="button" class="btn btn-secondary button_right"><i class="fas fa-angle-right fa-2x"></i></button></td>
+         <td class="align-middle"><input disabled style="color: black;font-size: 15px; width: 100px;" name="" value="{{gripper_value}}°" id = "gripper"></td>
       </tr>
    </tbody>
 </table>
