--- a/Robocol/testapp/src/app/rover/brazo/brazo-cinematica-inversa-horizontal/brazo-cinematica-inversa-horizontal.component.html
+++ b/Robocol/testapp/src/app/rover/brazo/brazo-cinematica-inversa-horizontal/brazo-cinematica-inversa-horizontal.component.html
@@ -1,24 +1,32 @@
-<div class="img-wrapper">
-   <img class="img-responsive" src="{{imageSrc}}">
-   <div class="img-overlay">
-      <table class="table table-borderless" style="height: 100%; background-color: transparent;">
-         <tbody>
-            <tr class="justify-content-center text-center align-middle">
-               <td class="td"></td>
-               <td class=" td justify-content-center text-center align-middle"><button class="btn btn-default btn-block" (mousedown)="changeImage(imageButtons[2])" (mouseup)="changeImage(imageButtons[0])">FRONT</button></td>
-               <td class="td"></td>
-            </tr>
-            <tr class="justify-content-center text-center align-middle">
-               <td class="td justify-content-center text-center align-middle"><button class="btn btn-default btn-block" (mousedown)="changeImage(imageButtons[3])" (mouseup)="changeImage(imageButtons[0])">LEFT</button></td>
-               <td class="td"></td>
-               <td class="td justify-content-center text-center align-middle"><button class="btn btn-default btn-block" (mousedown)="changeImage(imageButtons[4])" (mouseup)="changeImage(imageButtons[0])">RIGHT</button></td>
-            </tr>
-            <tr class="justify-content-center text-center align-middle">
-               <td class="td"></td>
-               <td class="td justify-content-center text-center align-middle"><button class="btn btn-default btn-block" (mousedown)="changeImage(imageButtons[1])" (mouseup)="changeImage(imageButtons[0])">BACK</button></td>
-               <td class="td"></td>
-            </tr>
-         </tbody>
-      </table>
-   </div>
-</div>
+<table class="table table-borderless" style="height: 100%; background-color: transparent;">
+   <tbody>
+      <tr class="justify-content-center text-center align-middle">
+         <td class="justify-content-center text-center align-middle" style="padding: 0px;">
+            <div class="img-wrapper">
+               <img class="img-responsive" src="{{imageSrc}}">
+               <div class="img-overlay">
+                  <table class="table table-borderless" style="height: 100%; background-color: transparent;">
+                     <tbody>
+                        <tr class="justify-content-center text-center align-middle">
+                           <td class="td"></td>
+                           <td class=" td justify-content-center text-center align-middle"><button class="btn btn-default btn-block" (mousedown)="changeImage(imageButtons[2])" (mouseup)="changeImage(imageButtons[0])">FRONT</button></td>
+                           <td class="td"></td>
+                        </tr>
+                        <tr class="justify-content-center text-center align-middle">
+                           <td class="td justify-content-center text-center align-middle"><button class="btn btn-default btn-block" (mousedown)="changeImage(imageButtons[3])" (mouseup)="changeImage(imageButtons[0])">LEFT</button></td>
+                           <td class="td"></td>
+                           <td class="td justify-content-center text-center align-middle"><button class="btn btn-default btn-block" (mousedown)="changeImage(imageButtons[4])" (mouseup)="changeImage(imageButtons[0])">RIGHT</button></td>
+                        </tr>
+                        <tr class="justify-content-center text-center align-middle">
+                           <td class="td"></td>
+                           <td class="td justify-content-center text-center align-middle"><button class="btn btn-default btn-block" (mousedown)="changeImage(imageButtons[1])" (mouseup)="changeImage(imageButtons[0])">BACK</button></td>
+                           <td class="td"></td>
+                        </tr>
+                     </tbody>
+                  </table>
+               </div>
+            </div>
+         </td>
+      </tr>
+   </tbody>
+</table>
