--- a/Robocol/testapp/src/app/rover/brazo/brazo-cinematica-directa/brazo-cinematica-directa.component.html
+++ b/Robocol/testapp/src/app/rover/brazo/brazo-cinematica-directa/brazo-cinematica-directa.component.html
@@ -9,7 +9,7 @@
             </div>
          </td>
          <td class="align-middle"><button id="1_ADELANTE" (mousedown)="change_value('joint_1', 'increase')" (mouseup)="stop_changing_value()" type="button" class="btn btn-secondary button_right"><i class="fas fa-angle-right fa-2x"></i></button></td>
-         <td class="align-middle"><input disabled style="color: black;font-size: 15px; width: 100px;" name="" value="{{joint_1_value}}°" id = "joint1"></td>
+         <td class="align-middle"><input disabled style="color: black;font-size: 15px;" name="" value="{{joint_1_value}}°" id = "joint1"></td>
       </tr>
       <tr class="align-middle">
          <th class="align-middle" scope="row">J2</th>
@@ -20,7 +20,7 @@
             </div>
          </td>
          <td class="align-middle"><button id="2_ADELANTE" (mousedown)="change_value('joint_2', 'increase')" (mouseup)="stop_changing_value()" type="button" class="btn btn-secondary button_right"><i class="fas fa-angle-right fa-2x"></i></button></td>
-         <td class="align-middle"><input disabled style="color: black;font-size: 15px; width: 100px;" name="" value="{{joint_2_value}}°" id = "joint2"></td>
+         <td class="align-middle"><input disabled style="color: black;font-size: 15px;" name="" value="{{joint_2_value}}°" id = "joint2"></td>
       </tr>
       <tr class="align-middle">
          <th class="align-middle" scope="row">J3</th>
@@ -31,7 +31,7 @@
             </div>
          </td>
          <td class="align-middle"><button id="3_ADELANTE" (mousedown)="change_value('joint_3', 'increase')" (mouseup)="stop_changing_value()" type="button" class="btn btn-secondary button_right"><i class="fas fa-angle-right fa-2x"></i></button></td>
-         <td class="align-middle"><input disabled style="color: black;font-size: 15px; width: 100px;" name="" value="{{joint_3_value}}°" id = "joint3"></td>
+         <td class="align-middle"><input disabled style="color: black;font-size: 15px;" name="" value="{{joint_3_value}}°" id = "joint3"></td>
       </tr>
       <tr class="align-middle">
          <th class="align-middle" scope="row">J4</th>
@@ -42,7 +42,7 @@
             </div>
          </td>
          <td class="align-middle"><button id="4_ADELANTE" (mousedown)="change_value('joint_4', 'increase')" (mouseup)="stop_changing_value()" type="button" class="btn btn-secondary button_right"><i class="fas fa-angle-right fa-2x"></i></button></td>
-         <td class="align-middle"><input disabled style="color: black;font-size: 15px; width: 100px;" name="" value="{{joint_4_value}}°" id = "joint4"></td>
+         <td class="align-middle"><input disabled style="color: black;font-size: 15px;" name="" value="{{joint_4_value}}°" id = "joint4"></td>
       </tr>
       <tr class="align-middle">
          <th class="align-middle" scope="row">J5</th>
@@ -53,7 +53,7 @@
             </div>
          </td>
          <td class="align-middle"><button id="5_ADELANTE" (mousedown)="change_value('joint_5', 'increase')" (mouseup)="stop_changing_value()" type="button" class="btn btn-secondary button_right"><i class="fas fa-angle-right fa-2x"></i></button></td>
-         <td class="align-middle"><input disabled style="color: black;font-size: 15px; width: 100px;" name="" value="{{joint_5_value}}°" id = "joint5"></td>
+         <td class="align-middle"><input disabled style="color: black;font-size: 15px;" name="" value="{{joint_5_value}}°" id = "joint5"></td>
       </tr>
       <tr class="align-middle">
          <th class="align-middle" scope="row">J6</th>
@@ -64,7 +64,7 @@
             </div>
          </td>
          <td class="align-middle"><button id="6_ADELANTE" (mousedown)="change_value('joint_6', 'increase')" (mouseup)="stop_changing_value()" type="button" class="btn btn-secondary button_right"><i class="fas fa-angle-right fa-2x"></i></button></td>
-         <td class="align-middle"><input disabled style="color: black;font-size: 15px;width: 100px;" name="" value="{{joint_6_value}}°" id = "joint6"></td>
+         <td class="align-middle"><input disabled style="color: black;font-size: 15px;" name="" value="{{joint_6_value}}°" id = "joint6"></td>
       </tr>
       <tr class="align-middle">
          <th class="align-middle" scope="row">J7</th>
@@ -75,7 +75,7 @@
             </div>
          </td>
          <td class="align-middle"><button id="7_ADELANTE" (mousedown)="change_value('joint_7', 'increase')" (mouseup)="stop_changing_value()" type="button" class="btn btn-secondary button_right"><i class="fas fa-angle-right fa-2x"></i></button></td>
-         <td class="align-middle"><input disabled style="color: black;font-size: 15px; width: 100px;" name="" value="{{joint_7_value}}°" id = "joint7"></td>
+         <td class="align-middle"><input disabled style="color: black;font-size: 15px;" name="" value="{{joint_7_value}}°" id = "joint7"></td>
       </tr>
       <tr class="align-middle">
          <th class="align-middle" scope="row">GR</th>
@@ -86,7 +86,7 @@
             </div>
          </td>
          <td class="align-middle"><button id="gripper_ADELANTE" (mousedown)="change_value('gripper', 'increase')" (mouseup)="stop_changing_value()" type="button" class="btn btn-secondary button_right"><i class="fas fa-angle-right fa-2x"></i></button></td>
-         <td class="align-middle"><input disabled style="color: black;font-size: 15px; width: 100px;" name="" value="{{gripper_value}}°" id = "gripper"></td>
+         <td class="align-middle"><input disabled style="color: black;font-size: 15px;" name="" value="{{gripper_value}}°" id = "gripper"></td>
       </tr>
    </tbody>
 </table>
