Design and functionality changes. App, Auth and sensors components modified.

--- a/Robocol/testapp/src/app/rover/sensorica/analysis/analysis.component.html
+++ b/Robocol/testapp/src/app/rover/sensorica/analysis/analysis.component.html
@@ -1,8 +1,10 @@
-<div class="card border-warning bg-transparent">
-	<div class="card-header text-warning text-center">
+<div class="container">
+
+<!-- <div class="card border-warning bg-transparent"> -->
+	<!-- <div class="card-header text-warning text-center">
 		Database analysis description
-	</div>
-	<div class="card-body">
+	</div> -->
+	<!-- <div class="card-body"> -->
 		<!-- <div class="row">
 			<h5 class="card-title">Database analysis description</h5>
 		</div> -->
@@ -20,20 +22,22 @@
 				</div>
 			</div>
 			<div class="col">
-				<div class="card-transparent">
-					<div class="card-body">
-						<div class="row">
-								<h5 class="card-title">Graphs</h5>
-						</div>
+				<!-- <div class="card-transparent"> -->
+					<!-- <div class="card-body"> -->
+						<!-- <div class="row"> -->
+								<!-- <h5 class="card-title" -->
+								Graphs
+							<!-- </h5> -->
+						<!-- </div> -->
 						<!-- <div class="row">
 								<img src="../../../assets/pirita.jpg" alt="Rocks" width="150px">
 						</div> -->
 					</div>
 				</div>
 			</div>
-		</div>
-	</div>
-</div>
+		<!-- </div> -->
+	<!-- </div> -->
+<!-- </div> -->
 
 <!-- <div id="sensors_info">
 	<div class="sensors_title">
