--- a/Robocol/testapp/src/app/rover/sensorica/drilling/drilling.component.html
+++ b/Robocol/testapp/src/app/rover/sensorica/drilling/drilling.component.html
@@ -1,13 +1,14 @@
-<div class="card border-warning bg-transparent">
-	<div class="card-header text-warning text-center">
+<!-- <div class="card border-warning bg-transparent"> -->
+	<!-- <div class="card-header text-warning text-center">
 		Drilling
-	</div>
-	<div class="card-body">
+	</div> -->
+	<!-- <div class="card-body"> -->
 		<!-- <div class="row">
 			<div class="col">
 				<h5 class="card-title">Drilling</h5>
 			</div>
 		</div> -->
+<div class="container">
 		<div class="row">
 			<div class="col">
 				<div class="row">
@@ -26,9 +27,10 @@
 						<input disabled type="text" class="form-control" id="basic-url-2" aria-describedby="basic-addon3">
 					</div>
 				</div>
-				<button (mousedown)="change_value('joint_1', 'decrease')" (mouseup)="stop_changing_value()" type="button" class="btn btn-dark">Drill!</button>
+				<button (mousedown)="change_value('joint_1', 'decrease')" (mouseup)="stop_changing_value()" type="button" class="btn btn-primary">Drill!</button>
 				<button type="button" class="btn btn-danger">Stop</button>
 			</div>
 		</div>
-	</div>
 </div>
+	<!-- </div> -->
+<!-- </div> -->
