--- a/Robocol/testapp/src/app/rover/sensorica/eva/eva.component.html
+++ b/Robocol/testapp/src/app/rover/sensorica/eva/eva.component.html
@@ -1,32 +1,17 @@
-<div class="card border-warning bg-transparent">
-	<div class="card-header text-warning text-center">
+<!-- <div class="card border-warning bg-transparent"> -->
+	<!-- <div class="card-header text-warning text-center">
 		EVA
-	</div>
-	<div class="card-body bg-black">
-		<div id="EVA">
-			<!--Accordion wrapper-->
-			<!-- <mdb-accordion [multiple]="false" aria-multiselectable="true">
-				<mdb-accordion-item  [collapsed]="true" *ngFor="let item of itemsList">
-					<mdb-accordion-item-head> {{ item.title }} </mdb-accordion-item-head>
-					<mdb-accordion-item-body> {{ item.description }} </mdb-accordion-item-body>
-				</mdb-accordion-item>
-			</mdb-accordion> -->
-			<!--/.Accordion wrapper-->
+	</div> -->
+	<!-- <div class="card-body bg-black"> -->
+		<!-- <div id="EVA"> -->
+<div class="container-fluid">
 
-			<!-- <accordion [isAnimated]="true" [closeOthers]="oneAtATime">
-				<accordion-group>
-					<h5 class="mb-0" accordion-heading>Collapsible Group Item #1</h5>
-					This content is straight in the template.
-				</accordion-group>
-				<accordion-group >
-					<h5 class="mb-0" accordion-heading>Collapsible Group Item #2</h5>
-					<p>Some content</p>
-				</accordion-group>
-				<accordion-group >
-					<h5 class="mb-0" accordion-heading>Collapsible Group Item #3</h5>
-					<p>Some content</p>
-				</accordion-group>
-			</accordion> -->
+
+<div class="row">
+
+
+			<div class="col">
+
 
 			<!-- Sample 1 -->
 			<div class="card-transparent">
@@ -142,10 +127,11 @@
 					</div>
 				</div>
 			</div>
+			</div>
 
 
 
-
+			<div class="col">
 			<!-- Sample 2 -->
 			<div class="card-transparent">
 				<div class="card-header" id="headingOne">
@@ -260,11 +246,9 @@
 					</div>
 				</div>
 			</div>
+			</div>
 
-
-
-
-
+			<div class="col">
 			<!-- Sample 3 -->
 			<div class="card-transparent">
 				<div class="card-header" id="headingOne">
@@ -379,212 +363,10 @@
 					</div>
 				</div>
 			</div>
-
-
-
-
-			<!-- Sample 2 -->
-			<!-- <div class="card">
-				<div class="card-header" id="headingOne">
-					<h5 class="mb-0">
-						<button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-							Sample 1
-						</button>
-					</h5>
-				</div>
-				<div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
-					<div class="card-body">
-						<div id="Sample 1">
-							<div class="card">
-								<div class="card-header" id="headingOne">
-									<h5 class="mb-0">
-										<button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-											Sample 1.1
-										</button>
-									</h5>
-								</div>
-								<div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
-									<div class="card-body">
-										Info 1.1
-									</div>
-								</div>
-							</div>
-							<div class="card">
-								<div class="card-header" id="headingOne">
-									<h5 class="mb-0">
-										<button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-											Sample 1.2
-										</button>
-									</h5>
-								</div>
-								<div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
-									<div class="card-body">
-										Info 1.2
-									</div>
-								</div>
-							</div>
-							<div class="card">
-								<div class="card-header" id="headingOne">
-									<h5 class="mb-0">
-										<button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-											Sample 1.3
-										</button>
-									</h5>
-								</div>
-								<div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
-									<div class="card-body">
-										Info 1.3
-									</div>
-								</div>
-							</div>
-							<div class="card">
-								<div class="card-header" id="headingOne">
-									<h5 class="mb-0">
-										<button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-											Sample 1.4
-										</button>
-									</h5>
-								</div>
-								<div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
-									<div class="card-body">
-										Info 1.4
-									</div>
-								</div>
-							</div>
-							<div class="card">
-								<div class="card-header" id="headingOne">
-									<h5 class="mb-0">
-										<button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-											Sample 1.5
-										</button>
-									</h5>
-								</div>
-								<div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
-									<div class="card-body">
-										Info 1.5
-									</div>
-								</div>
-							</div>
-							<div class="card">
-								<div class="card-header" id="headingOne">
-									<h5 class="mb-0">
-										<button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-											Sample 1.6
-										</button>
-									</h5>
-								</div>
-								<div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
-									<div class="card-body">
-										Info 1.6
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div> -->
-
-			<!-- Sample 3 -->
-			<!-- <div class="card">
-				<div class="card-header" id="headingOne">
-					<h5 class="mb-0">
-						<button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-							Sample 3
-						</button>
-					</h5>
-				</div>
-				<div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
-					<div class="card-body">
-						<div id="Sample 1">
-							<div class="card">
-								<div class="card-header" id="headingOne">
-									<h5 class="mb-0">
-										<button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-											Sample 3.1
-										</button>
-									</h5>
-								</div>
-								<div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
-									<div class="card-body">
-										Info 3.1
-									</div>
-								</div>
-							</div>
-							<div class="card">
-								<div class="card-header" id="headingOne">
-									<h5 class="mb-0">
-										<button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-											Sample 3.2
-										</button>
-									</h5>
-								</div>
-								<div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
-									<div class="card-body">
-										Info 3.2
-									</div>
-								</div>
-							</div>
-							<div class="card">
-								<div class="card-header" id="headingOne">
-									<h5 class="mb-0">
-										<button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-											Sample 3.3
-										</button>
-									</h5>
-								</div>
-								<div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
-									<div class="card-body">
-										Info 3.3
-									</div>
-								</div>
-							</div>
-							<div class="card">
-								<div class="card-header" id="headingOne">
-									<h5 class="mb-0">
-										<button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-											Sample 3.4
-										</button>
-									</h5>
-								</div>
-								<div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
-									<div class="card-body">
-										Info 3.4
-									</div>
-								</div>
-							</div>
-							<div class="card">
-								<div class="card-header" id="headingOne">
-									<h5 class="mb-0">
-										<button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-											Sample 3.5
-										</button>
-									</h5>
-								</div>
-								<div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
-									<div class="card-body">
-										Info 3.5
-									</div>
-								</div>
-							</div>
-							<div class="card">
-								<div class="card-header" id="headingOne">
-									<h5 class="mb-0">
-										<button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-											Sample 3.6
-										</button>
-									</h5>
-								</div>
-								<div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
-									<div class="card-body">
-										Info 3.6
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div> -->
-
-		</div>
-	</div>
+			</div>
 </div>
+
+</div>
+		<!-- </div> -->
+	<!-- </div> -->
+<!-- </div> -->
