--- a/Robocol/testapp/src/app/rover/sensorica/station/station.component.html
+++ b/Robocol/testapp/src/app/rover/sensorica/station/station.component.html
@@ -1,87 +1,51 @@
-<!-- <div class="container"> -->
-	<div class="card border-warning bg-transparent">
-		<div class="card-header text-warning text-center">
-	    Weather Station
-	  </div>
-		<div class="card-body bg-black">
-			<!-- <div class="row">
-					<h5 class="card-title">Weather Station</h5>
-			</div> -->
+<div class="container">
+	<!-- <div class="card border-warning bg-transparent"> -->
+		<!-- <div class="card-body bg-black"> -->
 			<div class="row">
 				<div class="col">
 					<table id="EVA_table">
 						<tr>
-							<th id="EVA_1_1">Ambient Temperature:</th>
-							<th id="EVA_1_3"><input disabled id="amb_temp" name="field1"/></th>
+							<th id="EVA_1_1">
+								Ambient Temperature:
+								<br>
+							<!-- </th>
+							<th id="EVA_1_3"> -->
+								<input disabled id="amb_temp" name="field1"/>
+							</th>
 						</tr>
 						<tr>
-							<th id="EVA_1_1">Ambiente Moisture:</th>
-							<th id="EVA_1_3"><input disabled id="amb_hum" name="field2"/></th>
+							<th id="EVA_1_1">
+								Ambiente Moisture:
+								<br>
+							<!-- </th>
+							<th id="EVA_1_3"> -->
+								<input disabled id="amb_hum" name="field2"/>
+							</th>
 						</tr>
 						<tr>
-							<th id="EVA_1_1">Wind Velocity:</th>
-							<th id="EVA_1_3"><input disabled id="wind_vel" name="field1"/></th>
+							<th id="EVA_1_1">
+								Wind Velocity:
+								<br>
+							<!-- </th>
+							<th id="EVA_1_3"> -->
+								<input disabled id="wind_vel" name="field1"/>
+							</th>
 						</tr>
 						<tr>
-							<th id="EVA_1_1">Wind Direction:</th>
-							<th id="EVA_1_3"><input disabled id="wind_dir" name="field1"/></th>
+							<th id="EVA_1_1">
+								Wind Direction:
+								<br>
+							<!-- </th>
+							<th id="EVA_1_3"> -->
+								<input disabled id="wind_dir" name="field1"/>
+							</th>
 						</tr>
-						<!-- <tr>
-							<th id="EVA_1_1">CO:</th>
-							<th id="EVA_1_3"><input disabled id="co" name="field1"/></th>
-						</tr>
-						<tr>
-							<th id="EVA_1_1">CO2:</th>
-							<th id="EVA_1_3"><input disabled id="co2" name="field2"/></th>
-						</tr>
-						<tr>
-							<th id="EVA_1_1">Methane Concentration:</th>
-							<th id="EVA_1_3"><input disabled id="methane" name="field1"/></th>
-						</tr>
-						<tr>
-							<th id="EVA_1_1">Hydrogen Concentration:</th>
-							<th id="EVA_1_3"><input disabled id="hydrogen" name="field1"/></th>
-						</tr> -->
 					</table>
 				</div>
+				<div class="col">
+					<img class="card-img-top" src="../../../assets/Sensors/anemometer.gif" alt="Anemometer img" width="10px"/>
+				</div>
 			</div>
-		</div>
-	</div>
-<!-- </div> -->
-
-<!-- <div id="sensors_measurements">
-	<div class="sensors_measurements_title">
-		<label>
-			<b>Sample 1.1 - Measurements</b>
-		</label>
-	</div>
-	<div class="sensors_measurements_box">
-		<label class="sensors_measurements_box_title">
-			Ambient Temperature
-			<div>
-				<input disabled id="temperature" name="field1"/>
-			</div>
-		</label>
-		<label class="sensors_measurements_box_title">
-			Ambient Moisture
-			<div>
-				<input disabled id="ph" name="field2"/>
-			</div>
-		</label>
-	</div>
-
-	<div class="sensors_measurements_box_2">
-		<label class="sensors_measurements_box_title">
-			Wind Velocity
-			<div>
-				<input disabled id="humidity" name="field1"/>
-			</div>
-		</label>
-		<label class="sensors_measurements_box_title">
-			Wind Direction
-			<div>
-				<input disabled id="air_quality" name="field2"/>
-			</div>
-		</label>
-	</div>
-</div> -->
+		<!-- </div> -->
+	<!-- </div> -->
+</div>
