--- a/Robocol/testapp/src/app/app.component.html
+++ b/Robocol/testapp/src/app/app.component.html
@@ -13,36 +13,36 @@
         <ul class="nav navbar-nav">
           <!-- Pestanas del ROVER -->
           <li class="nav-item" *ngxPermissionsOnly="['ROVER']">
-            <a routerLinkActive="active" routerLink="/brazo" class="nav-link">Brazo <span class="sr-only">(current)</span>  </a>
+            <a routerLinkActive="active" routerLink="/brazo" class="nav-link">ARM<span class="sr-only">(current)</span>  </a>
           </li>
           <li class="nav-item" *ngxPermissionsOnly="['ROVER']">
-            <a routerLinkActive="active" routerLink="/traccion" class="nav-link">Tracción <span class="sr-only">(current)</span>  </a>
+            <a routerLinkActive="active" routerLink="/traccion" class="nav-link">TRACTION<span class="sr-only">(current)</span>  </a>
           </li>
           <li class="nav-item" *ngxPermissionsOnly="['ROVER']">
-            <a routerLinkActive="active" routerLink="/estado" class="nav-link">Estado <span class="sr-only">(current)</span>  </a>
+            <a routerLinkActive="active" routerLink="/estado" class="nav-link">STATUS<span class="sr-only">(current)</span>  </a>
           </li>
           <li class="nav-item" *ngxPermissionsOnly="['ROVER']">
-            <a routerLinkActive="active" routerLink="/estadoTopicos" class="nav-link">Ros Info<span class="sr-only">(current)</span>  </a>
+            <a routerLinkActive="active" routerLink="/estadoTopicos" class="nav-link">ROS INFO<span class="sr-only">(current)</span>  </a>
           </li>
           <li class="nav-item" *ngxPermissionsOnly="['ROVER']">
-            <a routerLinkActive="active" routerLink="/sensorica" class="nav-link">Sensórica <span class="sr-only">(current)</span>  </a>
+            <a routerLinkActive="active" routerLink="/sensorica" class="nav-link">SENSORS<span class="sr-only">(current)</span>  </a>
           </li>
           <!-- Pestanas del SUBMARINO -->
           <li class="nav-item" *ngxPermissionsOnly="['SUBMARINO']">
-            <a routerLinkActive="active" routerLink="/navegacion" class="nav-link">Navegación <span class="sr-only">(current)</span>  </a>
+            <a routerLinkActive="active" routerLink="/navegacion" class="nav-link">NAVIGATION<span class="sr-only">(current)</span>  </a>
           </li>
           <li class="nav-item" *ngxPermissionsOnly="['SUBMARINO']">
-            <a routerLinkActive="active" routerLink="/pinza" class="nav-link">Pinza <span class="sr-only">(current)</span>  </a>
+            <a routerLinkActive="active" routerLink="/pinza" class="nav-link">ARM<span class="sr-only">(current)</span>  </a>
           </li>
           <li class="nav-item" *ngxPermissionsOnly="['SUBMARINO']">
-            <a routerLinkActive="active" routerLink="/estadoSub" class="nav-link">Estado<span class="sr-only">(current)</span>  </a>
+            <a routerLinkActive="active" routerLink="/estadoSub" class="nav-link">STATUS<span class="sr-only">(current)</span>  </a>
           </li>
           <!-- Pestanas del LUNABOT -->
           <li class="nav-item" *ngxPermissionsOnly="['LUNABOT']">
-            <a routerLinkActive="active" routerLink="/prueba" class="nav-link">Prueba <span class="sr-only">(current)</span>  </a>
+            <a routerLinkActive="active" routerLink="/prueba" class="nav-link">TESTS<span class="sr-only">(current)</span>  </a>
           </li>
           <li class="nav-item" *ngxPermissionsOnly="['LUNABOT']">
-            <a routerLinkActive="active" routerLink="/estadoLuna" class="nav-link">Estado <span class="sr-only">(current)</span>  </a>
+            <a routerLinkActive="active" routerLink="/estadoLuna" class="nav-link">STATUS<span class="sr-only">(current)</span>  </a>
           </li>
         </ul>
         <!-- Elementos de la derecha barra superior. -->
@@ -50,16 +50,17 @@
           <ul class="navbar-nav ml-auto">
             <span class="navbar-text">
               <span class="badge badge-warning" *ngxPermissionsOnly="['ROVER']">ROVER</span>
-              <span class="badge badge-warning" *ngxPermissionsOnly="['SUBMARINO']">SUBMARINO</span>
+              <span class="badge badge-warning" *ngxPermissionsOnly="['SUBMARINO']">SUBMARINE</span>
               <span class="badge badge-warning" *ngxPermissionsOnly="['LUNABOT']">LUNABOT</span>
             </span>
           </ul>
         </div>
         &nbsp;&nbsp;
-        <button type="button" class="btn btn-outline-warning">Iniciar Sesión</button>
+        <button type="button" class="btn btn-outline-warning" id="logIn">Log In</button>
       </div>
     </nav>
-    <main role="main" class="container-fluid bg-dark">
+    <!-- <main role="main" class="container-fluid bg-dark"> -->
+    <main role="main" class="container-fluid bg-dark pt-2">
       <router-outlet></router-outlet>
     </main>
   <!-- </div> -->
