--- a/Robocol/testapp/src/app/auth/auth-login/auth-login.component.html
+++ b/Robocol/testapp/src/app/auth/auth-login/auth-login.component.html
@@ -1,46 +1,55 @@
 <div class="container-fluid" id="projects_container">
   <span>
-    &nbsp;&nbsp;
+    <!-- &nbsp;&nbsp; -->
     &nbsp;&nbsp;
   </span>
   <div class="card-group mb-3">
     <div class="card border-warning" id="rover_card">
       <img src="././assets/Home/Rover.png" class="card-img-top" id="imgRover" alt="Rover">
       <div class="card-body text-center">
-        <h5 class="card-title">ROVER</h5>
+        <h5 class="card-title text-light">ROVER</h5>
         <p class="card-text">
-          <button type="button" class="btn btn-outline-warning" (click)="login('ROVER')">Entra Aquí</button>
+          <button type="button" class="btn btn-outline-warning" (click)="login('ROVER')">Enter here!</button>
         </p>
-        <p class="card-text"><small class="text-light">Activo</small></p>
+        <div class="card-footer">
+            <small class="text-light" id="active">Active now.</small>
+        </div>
+        <!-- <p class="card-text"><small class="text-light" id="active">Active now.</small></p> -->
       </div>
     </div>
     <div class="card border-warning" id ="submarine_card">
       <img src="././assets/Home/Submarino.png" class="card-img-top" id="imgSubmarino" alt="Submarino">
       <div class="card-body text-center">
-        <h5 class="card-title">SUBMARINO</h5>
+        <h5 class="card-title text-light">SUBMARINE</h5>
         <p class="card-text">
-          <button type="button" class="btn btn-outline-warning" (click)="login('SUBMARINO')">Entra Aquí</button>
+          <button type="button" class="btn btn-outline-warning" (click)="login('SUBMARINO')">Enter here!</button>
         </p>
-        <p class="card-text"><small class="text-light">Ultima vez activo hace 3 minutos</small></p>
+        <div class="card-footer">
+            <small class="text-muted" id="active">Active 2 hours ago.</small>
+        </div>
+        <!-- <p class="card-text"><small class="text-light" id="active">Active 3 minutes ago.</small></p> -->
       </div>
     </div>
     <div class="card border-warning" id="lunabot_card">
       <img src="././assets/LUNABOT.png" class="card-img-top" id="imgLunabot" alt="Lunabot">
       <div class="card-body text-center">
-        <h5 class="card-title">LUNABOT</h5>
+        <h5 class="card-title text-light">LUNABOT</h5>
         <p class="card-text">
-          <button type="button" class="btn btn-outline-warning" (click)="login('LUNABOT')">Entra Aquí</button>
+          <button type="button" class="btn btn-outline-warning" (click)="login('LUNABOT')">Enter here!</button>
         </p>
-        <p class="card-text"><small class="text-light">Ultima vez activo hace 3 minutos</small></p>
+        <div class="card-footer">
+            <small class="text-muted" id="active">Active 3 minutes ago.</small>
+        </div>
+        <!-- <p class="card-text"><small class="text-light" id="active">Active 3 minutes ago.</small></p> -->
       </div>
     </div>
   </div>
-  <span>
+  <!-- <span>
     &nbsp;&nbsp;
     &nbsp;&nbsp;
     &nbsp;&nbsp;
     &nbsp;&nbsp;
     &nbsp;&nbsp;
-  </span>
+  </span> -->
 
 </div>
