--- a/Robocol/testapp/src/app/rover/sensorica/measurements/measurements.component.css
+++ b/Robocol/testapp/src/app/rover/sensorica/measurements/measurements.component.css
@@ -1,8 +1,15 @@
+.card-horizontal
+{
+    display: flex;
+    flex: 1 1 auto;
+}
+
 label
 {
 	font-family: Helvetica;
 }
-th {
+th
+{
     /* background-color: blue; */
 		font-family: Helvetica;
     color: white;
